--- a/database/Dockerfile
+++ b/database/Dockerfile
@@ -1,10 +1,10 @@
 FROM postgres
 
-RUN apt-get update && apt-get install -y wget && rm -rf /var/lib/apt/lists/*
+ADD https://github.com/jwilder/dockerize/releases/download/v0.7.0/dockerize-alpine-linux-amd64-v0.7.0.tar.gz dockerize.tar.gz
 
-RUN wget https://github.com/jwilder/dockerize/releases/download/v0.7.0/dockerize-alpine-linux-amd64-v0.7.0.tar.gz \
-    && tar -C /usr/local/bin -xzvf dockerize-alpine-linux-amd64-v0.7.0.tar.gz \
-    && rm dockerize-alpine-linux-amd64-v0.7.0.tar.gz
+RUN tar -xzf dockerize.tar.gz
+
+RUN chmod +x dockerize
 
 COPY ./database/init.sql /docker-entrypoint-initdb.d/
 
